[gd_scene load_steps=12 format=3 uid="uid://deg2ogf7dhsi1"]

[ext_resource type="Script" path="res://SoundComponent/SoundComponent.gd" id="1_j2n2j"]
[ext_resource type="AudioStream" uid="uid://c0uxxsbjmpa0l" path="res://Sounds/footstep.wav" id="2_fb7yf"]
[ext_resource type="AudioStream" uid="uid://ciyglowhwqvp7" path="res://Sounds/enemy_footstep.wav" id="3_k4t0q"]
[ext_resource type="AudioStream" uid="uid://5qnaxrkmwp8f" path="res://Sounds/menu.wav" id="4_q3gxo"]
[ext_resource type="AudioStream" uid="uid://iy31l4vuhfhh" path="res://Sounds/success.wav" id="5_h68e7"]
[ext_resource type="AudioStream" uid="uid://clr86c6wrq44x" path="res://Sounds/pressure_plate_on.wav" id="6_0v3fp"]
[ext_resource type="AudioStream" uid="uid://dj81wqok0n1ns" path="res://Sounds/pressure_plate_off.wav" id="7_2qsm5"]
[ext_resource type="AudioStream" uid="uid://d1yviqp5xtn2q" path="res://Sounds/drill.wav" id="8_wmmif"]
[ext_resource type="AudioStream" uid="uid://b26j7wh1b4owo" path="res://Sounds/gate_open.wav" id="9_03xqp"]
[ext_resource type="AudioStream" uid="uid://cj83akq368tro" path="res://Sounds/interact.wav" id="10_8pmlx"]
[ext_resource type="AudioStream" uid="uid://eyuih5b26otq" path="res://Sounds/floor_hole.wav" id="11_snkjp"]

[node name="SoundComponent" type="Node"]
script = ExtResource("1_j2n2j")

[node name="PlayerFootstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fb7yf")

[node name="EnemyFootstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_k4t0q")
volume_db = -10.279

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q3gxo")

[node name="FinishedGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h68e7")

[node name="PressurePlateOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0v3fp")

[node name="PressurePlateOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2qsm5")

[node name="Drill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_wmmif")

[node name="GateOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_03xqp")

[node name="FractureBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8pmlx")

[node name="FloorFall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_snkjp")
